--- a/package.json
+++ b/package.json
@@ -73,9 +73,12 @@
 		]
 	},
 	"dependencies": {
+		"@cloudinary/react": "^1.13.0",
+		"@cloudinary/url-gen": "^1.20.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-hot-toast": "^2.4.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
 	}
